--- a/Mealtime/template/index.html
+++ b/Mealtime/template/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Meal Time.{font-family: 'Oswald';font-size:22px}</title>
+  <title>Meal Time</title>
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
@@ -15,13 +15,13 @@
     <div id="header">
       <div id="logo">
         <!-- class="logo_colour", allows you to change the colour of the text -->
-        <h1><a href="index.html">Meals Time<span class="logo_colour"></span></a></h1>
+        <h1><a href="index.html">Meal Time<span class="logo_colour"></span></a></h1>
         <h2>Meals Made Easy.</h2>
       </div>
       <div id="menubar">
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-          <li {% if tag == 'login' %}class="selected" {% endif %}><a href="/login">login</a></li>
+          <li {% if tag == 'login' %}class="selected" {% endif %}><a href="/">login</a></li>
           <li {% if tag == 'search' %}class="selected" {% endif %}><a href="/search">search</a></li>
           <li {% if tag == 'recipes' %}class="selected" {% endif %}><a href="/recipes">recipes</a></li>
           <li {% if tag == 'socials' %}class="selected" {% endif %}><a href="/socials">socials</a></li>
